<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="com.bekicode.slify.Postpone">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp">

        <ImageView
            android:layout_gravity="center"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:src="@drawable/logo"
            android:contentDescription="@string/descLogo" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp">

        <EditText
            android:id="@+id/username"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:inputType="text"
            android:hint="@string/username"
            android:textColor="@android:color/darker_gray"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Subtitle"
            android:textColorHint="@android:color/darker_gray"
            android:background="@drawable/login_input"/>

        <EditText
            android:id="@+id/password"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_marginTop="15dp"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:textColor="@android:color/darker_gray"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Subtitle"
            android:textColorHint="@android:color/darker_gray"
            android:background="@drawable/login_input"/>

        <Button
            android:id="@+id/btnSignIn"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_margin="20dp"
            android:layout_gravity="center"
            android:background="@drawable/button_login_pressed"
            android:clickable="true"
            android:text="@string/Signin"
            android:textColor="@android:color/white" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:orientation="vertical">

        <info.hoang8f.widget.FButton
            android:id="@+id/lgnFb"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:drawableStart="@drawable/fb"
            android:text="@string/facebook_button"
            android:drawablePadding="2dp"
            android:gravity="center"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:textColor="@android:color/white"
            app:buttonColor="@color/fb"
            app:cornerRadius="4dp" />

        <info.hoang8f.widget.FButton
            android:id="@+id/lgnGoogle"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/google_button"
            android:textColor="@android:color/darker_gray"
            android:layout_margin="8dp"
            android:layout_gravity="center"
            android:drawableStart="@drawable/google"
            android:drawablePadding="2dp"
            android:gravity="center"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            app:cornerRadius="4dp"
            app:buttonColor="@color/google"/>

        <TextView
            android:id="@+id/signUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_account"
            android:textColor="@color/CreateAccount"
            android:gravity="center"
            android:layout_margin="8dp"/>

    </LinearLayout>


</RelativeLayout>
